--- a/app/views/actors/new_form.html.erb
+++ b/app/views/actors/new_form.html.erb
@@ -2,6 +2,8 @@
   <h1>Add Actor</h1>
 </div>
 
+<p><a href="/actors/new_form" class="btn btn-primary">Add a new actor</a></p>
+
 <form action="/create_actor" class="form-horizontal">
   <!-- Label and input for dob -->
   <div class="form-group">
