--- a/app/views/directors/edit_form.html.erb
+++ b/app/views/directors/edit_form.html.erb
@@ -2,6 +2,8 @@
   <h1>Edit Director #<%= @director.id %></h1>
 </div>
 
+<p><a href="/directors/new_form" class="btn btn-primary">Add a new director</a></p>
+
 <form action="/update_director/<%= @director.id %>" class="form-horizontal">
   <!-- Label and input for dob -->
   <div class="form-group">
