--- a/app/views/directors/index.html.erb
+++ b/app/views/directors/index.html.erb
@@ -2,7 +2,7 @@
   <h1>Directors</h1>
 </div>
 
-<p><a href="/directors/new_form" class="btn btn-primary">Add a New Director</a></p>
+<p><a href="/directors/new_form" class="btn btn-primary">Add a new director</a></p>
 
 <table class="table table-hover">
   <thead>
