--- a/app/views/movies/edit_form.html.erb
+++ b/app/views/movies/edit_form.html.erb
@@ -2,6 +2,8 @@
   <h1>Edit Movie #<%= @movie.id %></h1>
 </div>
 
+<p><a href="/movies/new_form" class="btn btn-primary">Add a new movie</a></p>
+
 <form action="/update_movie/<%= @movie.id %>" class="form-horizontal">
   <!-- Label and input for title -->
   <div class="form-group">
