--- a/app/views/directors/index.html.erb
+++ b/app/views/directors/index.html.erb
@@ -20,13 +20,13 @@
   <tbody>
     <% @directors.each do |director| %>
       <tr>
-        <td><img src="<%= director.image_url %>" width="80"></td>
+        <td><%= director.image_url %></td>
         <td><%= director.dob %></td>
         <td><%= director.name %></td>
         <td><%= truncate(director.bio) %></td>
         <td>
           <a href="/directors/<%= director.id %>" class="btn btn-primary">
-            <i class="fa fa-search-plus"></i>
+            Show details
           </a>
         </td>
         <td>
