--- a/app/views/directors/show.html.erb
+++ b/app/views/directors/show.html.erb
@@ -13,6 +13,6 @@
   <dd><%= @director.bio %></dd>
 
   <dt>Image</dt>
-  <dd><img src="<%= @director.image_url %>" width="320"></dd>
+  <dd><td><%= @director.image_url %></td></dd>
 
 </dl>
