--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -22,14 +22,14 @@
   <tbody>
     <% @movies.each do |movie| %>
       <tr>
-        <td><img src="<%= movie.image_url %>" width="80"></td>
+        <td><%= movie.image_url %></td>
         <td><%= movie.title %></td>
         <td><%= movie.year %></td>
         <td><%= movie.duration %></td>
         <td><%= movie.description %></td>
         <td>
           <a href="/movies/<%= movie.id %>" class="btn btn-primary">
-            <i class="fa fa-search-plus"></i>
+            Show details
           </a>
         </td>
         <td>
