--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -19,7 +19,7 @@
   <dd><%= @movie.director_id %></dd>
 
   <dt>Image</dt>
-  <dd><img src="<%= @movie.image_url %>" width="320"></dd>
+  <dd><td><%= @movie.image_url %></td></dd>
 
 
 </dl>
