--- a/app/views/actors/index.html.erb
+++ b/app/views/actors/index.html.erb
@@ -20,7 +20,7 @@
   <tbody>
     <% @actor.each do |actor| %>
       <tr>
-        <td><%= actor.image_url %></td>
+         <!-- <td> #< actor.image_url %></td> -->
         <td><%= actor.dob %></td>
         <td><%= actor.name %></td>
         <td><%= truncate(actor.bio) %></td>
