--- a/app/views/directors/details.html.erb
+++ b/app/views/directors/details.html.erb
@@ -13,6 +13,10 @@
   <dd><%= @director.bio %></dd>
 
   <dt>Image</dt>
-  <dd><td><%= @director.image_url %></td></dd>
+  <dd><%= @director.image_url %></dd>
+  
+  <p><a href="/directors/destroy" class="btn btn-primary">Delete director</a></p>
+
+  <p><a href="/directors/edit_form" class="btn btn-primary">Edit movie</a></p>
 
 </dl>
