--- a/app/views/actors/edit_form.html.erb
+++ b/app/views/actors/edit_form.html.erb
@@ -2,6 +2,10 @@
   <h1>Edit Actor #<%= @actor.id %></h1>
 </div>
 
+<p><a href="/actors/new_form" class="btn btn-primary">Add a new actor</a></p>
+
+<p><a href="/actors/edit_form" class="btn btn-primary">Edit actor</a></p>
+
 <form action="/update_actor/<%= @actor.id %>" class="form-horizontal">
   <!-- Label and input for dob -->
   <div class="form-group">
