--- a/app/views/directors/destroy.html.erb
+++ b/app/views/directors/destroy.html.erb
@@ -2,4 +2,4 @@
   <h1>Destroyed <%= @director.name %></h1>
 </div>
 
-<p><a href="/directors" class="btn btn-primary">Go Back</a></p>
+<p><a href="/directors" class="btn btn-primary">Delete director</a></p>
