--- a/app/views/movies/edit_form.html.erb
+++ b/app/views/movies/edit_form.html.erb
@@ -4,6 +4,9 @@
 
 <p><a href="/movies/new_form" class="btn btn-primary">Add a new movie</a></p>
 
+<p><a href="/movies/edit_form" class="btn btn-primary">Edit movie</a></p>
+
+
 <form action="/update_movie/<%= @movie.id %>" class="form-horizontal">
   <!-- Label and input for title -->
   <div class="form-group">
