--- a/app/views/directors/edit_form.html.erb
+++ b/app/views/directors/edit_form.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-  <h1>Edit Director #<%= @director.id %></h1>
+  <h1>Edit Director <%= @director.name %></h1>
 </div>
 
 <p><a href="/directors/new_form" class="btn btn-primary">Add a new director</a></p>
@@ -23,7 +23,7 @@
       Name
     </label>
     <div class="col-sm-10">
-      <input type="text" id="name" name="name" placeholder="Name" class="form-control" value="<%= @director.name %>">
+     <input type="text" id="name" name="name" placeholder="Name" class="form-control" value="<%= @director.name %>">
     </div>
   </div>
 
@@ -33,7 +33,7 @@
       Bio
     </label>
     <div class="col-sm-10">
-      <textarea id="bio" name="bio" placeholder="Bio" class="form-control" rows="3"><%= @director.bio %></textarea>
+     <textarea id="bio" name="bio" placeholder="Bio" class="form-control" rows="3"><%= @director.bio %></textarea>
     </div>
   </div>
 
