--- a/app/views/actors/details.html.erb
+++ b/app/views/actors/details.html.erb
@@ -12,6 +12,8 @@
   <dt>Bio</dt>
   <dd><%= @actor.bio %></dd>
 
+  <dt>Image</dt>
+  <dd><img src="<%= actor.image_url %>"></dd>
   <!-- <dt>Image</dt> -->
   <!-- <dd> <= actor.image_url %></dd> -->
 
