--- a/app/views/actors/edit_form.html.erb
+++ b/app/views/actors/edit_form.html.erb
@@ -23,18 +23,14 @@
       Name
     </label>
     <div class="col-sm-10">
-      <input type="text" id="name" name="name" placeholder="Name" class="form-control" value="<%= @actor.name %>">
+      <textarea type="text" id="name" name="name" placeholder="Name" class="form-control" value="<%= @actor.name %>"></textarea>
     </div>
   </div>
 
   <!-- Label and input for bio -->
-  <div class="form-group">
-    <label for="bio" class="col-sm-2 control-label">
-      Bio
-    </label>
-    <div class="col-sm-10">
-      <textarea id="bio" name="bio" placeholder="Bio" class="form-control" rows="3"><%= @actor.bio %></textarea>
-    </div>
+  <div>
+    <label for="bio">Bio</label>
+    <textarea id="bio" name="bio"><%= @actor.bio %></textarea>
   </div>
 
   <!-- Label and input for image_url -->
