--- a/app/views/movies/details.html.erb
+++ b/app/views/movies/details.html.erb
@@ -23,6 +23,6 @@
   
   <p><a href="/movies/destroy" class="btn btn-primary">Delete movie</a></p>
 
-  <p><a href="/movies/edit_form" class="btn btn-primary">Edit movie</a></p>
+  <p><a href="/movies/edit" class="btn btn-primary">Edit movie</a></p>
 
 </dl>
