--- a/app/views/actors/details.html.erb
+++ b/app/views/actors/details.html.erb
@@ -1,24 +1,25 @@
 <div class="page-header">
-  <h1>Actor #<%= @actor.id %></h1>
+  <h3>Actor #<%= @actor.id %></h3>
 </div>
 
-<dl class="dl-horizontal">
-  <dt>Dob</dt>
-  <dd><%= @actor.dob %></dd>
+<div class="row">
+  <div class="col-md-12 mb-2">
+    <dl class="dl-horizontal">
+      <dt>Name</dt>
+      <dd><%= @actor.name %></dd>
 
-  <dt>Name</dt>
-  <dd><%= @actor.name %></dd>
+      <dt>Dob</dt>
+      <dd><%= @actor.dob %></dd>
 
-  <dt>Bio</dt>
-  <dd><%= @actor.bio %></dd>
+      <dt>Bio</dt>
+      <dd><%= @actor.bio %></dd>
 
-  <dt>Image</dt>
-  <dd><img src="<%= actor.image_url %>"></dd>
-  <!-- <dt>Image</dt> -->
-  <!-- <dd> <= actor.image_url %></dd> -->
+      <dt>Image url</dt>
+      <dd><%= @actor.image_url %></dd>
+    </dl>
+  </div>
+</div>  
 
-  <p><a href="/actors/destroy" class="btn btn-primary">Delete actor</a></p>
+<p><a href="/delete_actor/<%= @actor.id %>" class="btn btn-danger">Delete actor</a></p>
 
-  <p><a href="/actors/edit_form" class="btn btn-primary">Edit actor</a></p>
-
-</dl>
+<p><a href="/actors/<%= @actor.id %>/edit" class="btn btn-primary">Edit actor</a></p>
