--- a/app/views/actors/edit.html.erb
+++ b/app/views/actors/edit.html.erb
@@ -1,10 +1,5 @@
-<div class="page-header">
-  <h1>Edit Actor #<%= @actor.id %></h1>
+ <h1>Edit Actor #<%= @actor.id %></h1>
 </div>
-
-<p><a href="/actors/new_form" class="btn btn-primary">Add a new actor</a></p>
-
-<p><a href="/actors/edit_form" class="btn btn-primary">Edit actor</a></p>
 
 <form action="/update_actor/<%= @actor.id %>" class="form-horizontal">
   <!-- Label and input for dob -->
@@ -23,14 +18,18 @@
       Name
     </label>
     <div class="col-sm-10">
-      <textarea type="text" id="name" name="name" placeholder="Name" class="form-control" value="<%= @actor.name %>"></textarea>
+      <input type="text" id="name" name="name" placeholder="Name" class="form-control" value="<%= @actor.name %>">
     </div>
   </div>
 
   <!-- Label and input for bio -->
-  <div>
-    <label for="bio">Bio</label>
-    <textarea id="bio" name="bio"><%= @actor.bio %></textarea>
+  <div class="form-group">
+    <label for="bio" class="col-sm-2 control-label">
+      Bio
+    </label>
+    <div class="col-sm-10">
+      <textarea id="bio" name="bio" placeholder="Bio" class="form-control" rows="3"><%= @actor.bio %></textarea>
+    </div>
   </div>
 
   <!-- Label and input for image_url -->
