--- a/app/views/actors/new.html.erb
+++ b/app/views/actors/new.html.erb
@@ -2,8 +2,6 @@
   <h1>Add Actor</h1>
 </div>
 
-<p><a href="/actors/new_form" class="btn btn-primary">Add a new actor</a></p>
-
 <form action="/create_actor" class="form-horizontal">
   <!-- Label and input for dob -->
   <div class="form-group">
@@ -47,7 +45,9 @@
 
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <input type="submit" value="Create Actor" class="btn btn-primary">
+      <a href="/actors" class="btn btn-primary">
+        Create actor
+      </a>
     </div>
   </div>
 </form>
