--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,15 @@
   <div class="container">
     <%= yield %>
   </div>
-
+  
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li><a href="/directors">Directors</a></li>
+          <li><a href="/movies">Movies</a></li>
+          <li><a href="/actors">Actors</a></li>
+          <li><a href="/characters">Characters</a></li>
+        </ul>
+      </div>  
   <div class="rails-toolbar">
     <a href="/rails/git" target="_blank" class="rails-toolbar-button">
       Git
