--- a/app/views/movies/edit.html.erb
+++ b/app/views/movies/edit.html.erb
@@ -2,9 +2,9 @@
   <h1>Edit Movie #<%= @movie.id %></h1>
 </div>
 
-<p><a href="/movies/new_form" class="btn btn-primary">Add a new movie</a></p>
+<p><a href="/movies/new" class="btn btn-primary">Add a new movie</a></p>
 
-<p><a href="/movies/edit_form" class="btn btn-primary">Edit movie</a></p>
+<p><a href="/movies/edit" class="btn btn-primary">Edit movie</a></p>
 
 
 <form action="/update_movie/<%= @movie.id %>" class="form-horizontal">
@@ -64,7 +64,7 @@
       Director
     </label>
     <div class="col-sm-10">
-      <%= select_tag(:director_id, options_from_collection_for_select(Director.all, :id, :name, @movie.director_id), :class => "form-control") %>
+      <!-- <#%= select_tag(:director.id, options_from_collection_for_select(Director.all, :id, :name, @movie.director.id), :class => "form-control") %> -->
     </div>
   </div>
 
