--- a/app/views/directors/details.html.erb
+++ b/app/views/directors/details.html.erb
@@ -17,6 +17,6 @@
   
   <p><a href="/directors/destroy" class="btn btn-primary">Delete director</a></p>
 
-  <p><a href="/directors/edit_form" class="btn btn-primary">Edit movie</a></p>
+  <p><a href="/directors/edit_form" class="btn btn-primary">Edit director</a></p>
 
 </dl>
