--- a/app/views/directors/edit.html.erb
+++ b/app/views/directors/edit.html.erb
@@ -4,7 +4,7 @@
 
 <p><a href="/directors/new_form" class="btn btn-primary">Add a new director</a></p>
 
-<p><a href="/directors/edit_form" class="btn btn-primary">Edit director</a></p>
+<p><a href="/directors/edit" class="btn btn-primary">Edit director</a></p>
 
 <form action="/update_director/<%= @director.id %>" class="form-horizontal">
   <!-- Label and input for dob -->
