--- a/app/views/actors/new.html.erb
+++ b/app/views/actors/new.html.erb
@@ -2,7 +2,7 @@
   <h1>Add Actor</h1>
 </div>
 
-<form action="/create_actor" class="form-horizontal">
+<form action="/create_actor" method="get" class="form-horizontal">
   <!-- Label and input for dob -->
   <div class="form-group">
     <label for="dob" class="col-sm-2 control-label">
@@ -45,9 +45,7 @@
 
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <a href="/actors" class="btn btn-primary">
-        Create actor
-      </a>
+      <input type="submit" value= "Create actor" class="btn btn-primary">
     </div>
   </div>
 </form>
