--- a/app/views/directors/edit.html.erb
+++ b/app/views/directors/edit.html.erb
@@ -2,7 +2,7 @@
   <h1>Edit Director <%= @director.name %></h1>
 </div>
 
-<p><a href="/directors/new_form" class="btn btn-primary">Add a new director</a></p>
+<p><a href="/directors/new" class="btn btn-primary">Add a new director</a></p>
 
 <p><a href="/directors/edit" class="btn btn-primary">Edit director</a></p>
 
@@ -49,7 +49,7 @@
 
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <input type="submit" value="Update Director" class="btn btn-primary">
+      <input type="submit" value="Update director" class="btn btn-primary">
     </div>
   </div>
 </form>
