--- a/app/views/directors/new.html.erb
+++ b/app/views/directors/new.html.erb
@@ -2,7 +2,7 @@
   <h1>Add Director</h1>
 </div>
 
-<form action="/create_director" class="form-horizontal">
+<form action="/create_director" method="get" class="form-horizontal">
   <!-- Label and input for dob -->
   <div class="form-group">
     <label for="dob" class="col-sm-2 control-label">
@@ -45,7 +45,7 @@
 
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <input type="submit" value="Create Director" class="btn btn-primary">
+      <input type="submit" value="Create director" class="btn btn-primary">
     </div>
   </div>
 </form>
