--- a/app/views/movies/edit.html.erb
+++ b/app/views/movies/edit.html.erb
@@ -2,11 +2,6 @@
   <h1>Edit Movie #<%= @movie.id %></h1>
 </div>
 
-<p><a href="/movies/new" class="btn btn-primary">Add a new movie</a></p>
-
-<p><a href="/movies/edit" class="btn btn-primary">Edit movie</a></p>
-
-
 <form action="/update_movie/<%= @movie.id %>" class="form-horizontal">
   <!-- Label and input for title -->
   <div class="form-group">
@@ -59,18 +54,18 @@
   </div>
 
   <!-- Label and input for director_id -->
-  <div class="form-group">
-    <label for="director_id" class="col-sm-2 control-label">
-      Director
-    </label>
-    <div class="col-sm-10">
+  <!-- <div class="form-group"> -->
+    <!-- <label for="director_id" class="col-sm-2 control-label"> -->
+      <!-- Director -->
+    <!-- </label> -->
+   <!-- <div class="col-sm-10"> -->
       <!-- <#%= select_tag(:director.id, options_from_collection_for_select(Director.all, :id, :name, @movie.director.id), :class => "form-control") %> -->
-    </div>
-  </div>
+    <!-- </div> -->
+  <!-- </div> -->
 
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <input type="submit" value="Update Movie" class="btn btn-primary">
+      <input type="submit" value="Update movie" class="btn btn-primary">
     </div>
   </div>
 </form>
