--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -2,7 +2,7 @@
   <h1>Movies</h1>
 </div>
 
-<p><a href="/movies/new_form" class="btn btn-primary">Add a new movie</a></p>
+<p><a href="/movies/new" class="btn btn-primary">Add a new movie</a></p>
 
 <table class="table table-hover">
   <thead>
